[gd_scene load_steps=122 format=3 uid="uid://crjtftvmkahqx"]

[ext_resource type="PackedScene" uid="uid://bb8fvvxo2nhq1" path="res://Scenes/Objects/Characters/character.tscn" id="1_regtg"]
[ext_resource type="Script" path="res://Scenes/Objects/Characters/Saul/saul.gd" id="2_rhth6"]
[ext_resource type="PackedScene" uid="uid://c7thbq75e3db6" path="res://Scenes/Objects/water_splash.tscn" id="3_ewshg"]
[ext_resource type="PackedScene" uid="uid://ckw12igh1dbr4" path="res://Scenes/Objects/Characters/Saul/dash_trail.tscn" id="4_6x0l7"]
[ext_resource type="Texture2D" uid="uid://buql8wtc73qsp" path="res://Resources/Textures/Characters/Player/Saul/WallHang_Extra (AddinSachen).png" id="5_jhe1s"]
[ext_resource type="Texture2D" uid="uid://c020oxw1rfgj2" path="res://Resources/Textures/Characters/Player/Saul/Damaged.png" id="6_jcrio"]
[ext_resource type="Texture2D" uid="uid://cfefmmpanysh2" path="res://Resources/Textures/Characters/Player/Saul/Dash (AddinSachen).png" id="7_mqoe0"]
[ext_resource type="Texture2D" uid="uid://bhjt1w537wqs8" path="res://Resources/Textures/Characters/Player/Saul/DeathAnimation (potent).png" id="8_hsgxr"]
[ext_resource type="Texture2D" uid="uid://celucivfiof5n" path="res://Resources/Textures/Characters/Player/Saul/JumpEnd (AddinSachen).png" id="9_5kevp"]
[ext_resource type="Texture2D" uid="uid://dwo34cmhvt3ko" path="res://Resources/Textures/Characters/Player/Saul/Fall.png" id="10_qhhkc"]
[ext_resource type="Texture2D" uid="uid://0r7bmjic63s5" path="res://Resources/Textures/Characters/Player/Saul/Idle (AddinSachen).png" id="11_irfa0"]
[ext_resource type="Texture2D" uid="uid://bhv4ofhcrf0tn" path="res://Resources/Textures/Characters/Player/Saul/Jump.png" id="12_her0b"]
[ext_resource type="Texture2D" uid="uid://cfbvkkchewj7b" path="res://Resources/Textures/Characters/Player/Saul/LookingDown.png" id="13_xxb4t"]
[ext_resource type="Texture2D" uid="uid://b0jtwo8k73klr" path="res://Resources/Textures/Characters/Player/Saul/LookingUp.png" id="14_mehw5"]
[ext_resource type="Texture2D" uid="uid://cj43l3mynic37" path="res://Resources/Textures/Characters/Player/Saul/Running (AddinSachen).png" id="15_bnija"]
[ext_resource type="Texture2D" uid="uid://drod5aixx84ru" path="res://Resources/Textures/Characters/Player/Saul/Skidding (AddinSachen).png" id="16_sufr1"]
[ext_resource type="Texture2D" uid="uid://fw1h5po3wxnw" path="res://Resources/Textures/Characters/Player/Saul/WallSlide (AddinSachen).png" id="17_qjvf1"]
[ext_resource type="Texture2D" uid="uid://me1hjfcqsjid" path="res://Resources/Textures/Characters/Player/Saul/Walking (AddinSachen).png" id="18_xljog"]
[ext_resource type="Texture2D" uid="uid://djjnknhd3px7v" path="res://Resources/Textures/Characters/Player/Saul/Wall_Jump (AddinSachen)-Sheet.png" id="19_jrosr"]
[ext_resource type="Texture2D" uid="uid://bvwrlyelrr3qw" path="res://Resources/Textures/Characters/Player/Saul/water_idle.png" id="20_dbr0l"]
[ext_resource type="Texture2D" uid="uid://40ofd147r3ud" path="res://Resources/Textures/Characters/Player/Saul/water_swim.png" id="21_u4mgo"]
[ext_resource type="Texture2D" uid="uid://c3n18ttqpyhnu" path="res://Resources/Godot/particles atlas.tres" id="22_7s8ad"]
[ext_resource type="Texture2D" uid="uid://dx0ea2i1opwsi" path="res://Resources/Textures/Particles/bubbles sprite (Addin Sachen).png" id="23_14irh"]
[ext_resource type="AudioStream" uid="uid://dpg46pasbhqyu" path="res://Resources/Audio/SFX/Player/jump1.wav" id="23_afgeb"]
[ext_resource type="AudioStream" uid="uid://cqinx1if47psh" path="res://Resources/Audio/SFX/Player/jump2.wav" id="24_mecrg"]
[ext_resource type="AudioStream" uid="uid://c8thp02ix675n" path="res://Resources/Audio/SFX/Player/jump3.wav" id="25_iwtg6"]
[ext_resource type="AudioStream" uid="uid://ot03qd46eqrh" path="res://Resources/Audio/SFX/Player/dash.wav" id="26_ara2l"]
[ext_resource type="AudioStream" uid="uid://dng4sw7ti8ft5" path="res://Resources/Audio/SFX/Player/dash2.wav" id="26_ugh8l"]
[ext_resource type="AudioStream" uid="uid://mkt04tcqr0em" path="res://Resources/Audio/SFX/Player/hit_wall.wav" id="27_fmtxo"]
[ext_resource type="AudioStream" uid="uid://dxx86ee87i8vi" path="res://Resources/Audio/SFX/Player/dash3.wav" id="28_kknyl"]
[ext_resource type="AudioStream" uid="uid://dxrwue8mi1y8q" path="res://Resources/Audio/SFX/Player/footstep1.wav" id="30_a151y"]
[ext_resource type="AudioStream" uid="uid://dftb7ej7uoibk" path="res://Resources/Audio/SFX/Player/damaged.wav" id="30_kmcv7"]
[ext_resource type="AudioStream" uid="uid://b6m0wkbptemgh" path="res://Resources/Audio/SFX/Player/footstep2.wav" id="31_c1cyj"]
[ext_resource type="AudioStream" uid="uid://hapit8gq4mdo" path="res://Resources/Audio/SFX/Player/splash.wav" id="32_p54kd"]
[ext_resource type="AudioStream" uid="uid://coidgcixijus7" path="res://Resources/Audio/SFX/Player/splash2.wav" id="33_hms13"]
[ext_resource type="AudioStream" uid="uid://bkkdnyjegrry1" path="res://Resources/Audio/SFX/Player/splash3.wav" id="34_35b8i"]
[ext_resource type="AudioStream" uid="uid://ddi46xwcbtrcd" path="res://Resources/Audio/SFX/Player/water_ambience.wav" id="37_52ksu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypg7h"]
size = Vector2(13, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_euce1"]
atlas = ExtResource("5_jhe1s")
region = Rect2(16, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tfa3"]
atlas = ExtResource("6_jcrio")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uhwa"]
atlas = ExtResource("6_jcrio")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5qkt"]
atlas = ExtResource("7_mqoe0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd2wh"]
atlas = ExtResource("8_hsgxr")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uwke"]
atlas = ExtResource("8_hsgxr")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff0a6"]
atlas = ExtResource("8_hsgxr")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5osoh"]
atlas = ExtResource("8_hsgxr")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0voo4"]
atlas = ExtResource("8_hsgxr")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiloc"]
atlas = ExtResource("8_hsgxr")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3htcb"]
atlas = ExtResource("8_hsgxr")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl3ji"]
atlas = ExtResource("8_hsgxr")
region = Rect2(336, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ufpg"]
atlas = ExtResource("8_hsgxr")
region = Rect2(384, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pghy"]
atlas = ExtResource("9_5kevp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_piyu3"]
atlas = ExtResource("9_5kevp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qop0f"]
atlas = ExtResource("10_qhhkc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yax2t"]
atlas = ExtResource("10_qhhkc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqgd6"]
atlas = ExtResource("10_qhhkc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m4tc"]
atlas = ExtResource("10_qhhkc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyasq"]
atlas = ExtResource("11_irfa0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuuwy"]
atlas = ExtResource("11_irfa0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb8oe"]
atlas = ExtResource("11_irfa0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_to3br"]
atlas = ExtResource("11_irfa0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxajn"]
atlas = ExtResource("11_irfa0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ippgu"]
atlas = ExtResource("12_her0b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkfrt"]
atlas = ExtResource("12_her0b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w78gl"]
atlas = ExtResource("12_her0b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg73u"]
atlas = ExtResource("13_xxb4t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc28d"]
atlas = ExtResource("13_xxb4t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm2vj"]
atlas = ExtResource("13_xxb4t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gj8j"]
atlas = ExtResource("13_xxb4t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpf2c"]
atlas = ExtResource("13_xxb4t")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkiyc"]
atlas = ExtResource("14_mehw5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skogk"]
atlas = ExtResource("14_mehw5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5if52"]
atlas = ExtResource("14_mehw5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkmbe"]
atlas = ExtResource("14_mehw5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt1ti"]
atlas = ExtResource("14_mehw5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdha2"]
atlas = ExtResource("15_bnija")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s28k6"]
atlas = ExtResource("15_bnija")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1hkx"]
atlas = ExtResource("15_bnija")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1xmv"]
atlas = ExtResource("15_bnija")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjhdd"]
atlas = ExtResource("15_bnija")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh1oo"]
atlas = ExtResource("15_bnija")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqomd"]
atlas = ExtResource("16_sufr1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3c5w"]
atlas = ExtResource("16_sufr1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m70kn"]
atlas = ExtResource("16_sufr1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7xry"]
atlas = ExtResource("17_qjvf1")
region = Rect2(1, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_l22ww"]
atlas = ExtResource("17_qjvf1")
region = Rect2(32, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7vwq"]
atlas = ExtResource("17_qjvf1")
region = Rect2(63, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlmu0"]
atlas = ExtResource("17_qjvf1")
region = Rect2(94, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xn75"]
atlas = ExtResource("18_xljog")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h64v"]
atlas = ExtResource("18_xljog")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rctl"]
atlas = ExtResource("18_xljog")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umcxf"]
atlas = ExtResource("18_xljog")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp34o"]
atlas = ExtResource("18_xljog")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyime"]
atlas = ExtResource("18_xljog")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwtn2"]
atlas = ExtResource("19_jrosr")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwv2q"]
atlas = ExtResource("19_jrosr")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qxbn"]
atlas = ExtResource("19_jrosr")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0gdt"]
atlas = ExtResource("20_dbr0l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2msw8"]
atlas = ExtResource("20_dbr0l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpdgi"]
atlas = ExtResource("20_dbr0l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3fek"]
atlas = ExtResource("20_dbr0l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_px1lx"]
atlas = ExtResource("21_u4mgo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jydge"]
atlas = ExtResource("21_u4mgo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrrlm"]
atlas = ExtResource("21_u4mgo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_snssu"]
atlas = ExtResource("21_u4mgo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aodvu"]
atlas = ExtResource("21_u4mgo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vg3q4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_euce1")
}],
"loop": true,
"name": &"Cling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tfa3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uhwa")
}],
"loop": true,
"name": &"Damaged",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5qkt")
}],
"loop": true,
"name": &"Dashing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd2wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uwke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff0a6")
}, {
"duration": 1.6,
"texture": SubResource("AtlasTexture_5osoh")
}, {
"duration": 2.2,
"texture": SubResource("AtlasTexture_0voo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiloc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3htcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl3ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ufpg")
}],
"loop": false,
"name": &"Die",
"speed": 8.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_4pghy")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_piyu3")
}],
"loop": false,
"name": &"Fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qop0f")
}],
"loop": false,
"name": &"Fall 1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yax2t")
}],
"loop": false,
"name": &"Fall 2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqgd6")
}],
"loop": false,
"name": &"Fall 3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m4tc")
}],
"loop": false,
"name": &"Fall 4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyasq")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_tuuwy")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xb8oe")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_to3br")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_mxajn")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ippgu")
}],
"loop": false,
"name": &"Jump 1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkfrt")
}],
"loop": false,
"name": &"Jump 2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w78gl")
}],
"loop": false,
"name": &"Jump 3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg73u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc28d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm2vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gj8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpf2c")
}],
"loop": true,
"name": &"Looking Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkiyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skogk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5if52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkmbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt1ti")
}],
"loop": true,
"name": &"Looking Up",
"speed": 5.0
}, {
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_rdha2")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_s28k6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j1hkx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_u1xmv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kjhdd")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_sh1oo")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqomd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3c5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m70kn")
}],
"loop": true,
"name": &"Skidding",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7xry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l22ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7vwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlmu0")
}],
"loop": true,
"name": &"Sliding",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_1xn75")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8h64v")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_4rctl")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_umcxf")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_cp34o")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_uyime")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_xwtn2")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_fwv2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qxbn")
}],
"loop": false,
"name": &"Wall Jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0gdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2msw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpdgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3fek")
}],
"loop": true,
"name": &"Water Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_px1lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jydge")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_mrrlm")
}, {
"duration": 1.6,
"texture": SubResource("AtlasTexture_snssu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aodvu")
}],
"loop": true,
"name": &"Water Swim",
"speed": 8.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y8iht"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(8, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 5.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e1gwq"]
load_path = "res://.godot/imported/particles-Sheet.png-ff03683ea4b368a2c4600cc449697963.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_mwvod"]
atlas = SubResource("CompressedTexture2D_e1gwq")
region = Rect2(50, 0, 10, 10)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f7upe"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_eh6px"]
particle_flag_disable_z = true
angle_max = 180.0
spread = 180.0
initial_velocity_min = 60.0
initial_velocity_max = 80.0
gravity = Vector3(0, 0, 0)
damping_min = 50.0
damping_max = 50.0

[sub_resource type="AtlasTexture" id="AtlasTexture_grqm6"]
atlas = SubResource("CompressedTexture2D_e1gwq")
region = Rect2(20, 0, 10, 10)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kf0yp"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(8, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
radial_velocity_min = 5.0
radial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.6

[sub_resource type="AtlasTexture" id="AtlasTexture_blgdw"]
atlas = SubResource("CompressedTexture2D_e1gwq")
region = Rect2(10, 0, 10, 10)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_velti"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ak3j7"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector3(0, -20, 0)
anim_speed_min = 0.8
anim_speed_max = 0.8

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5o1wf"]
streams_count = 3
stream_0/stream = ExtResource("23_afgeb")
stream_0/weight = 1.0
stream_1/stream = ExtResource("24_mecrg")
stream_1/weight = 1.0
stream_2/stream = ExtResource("25_iwtg6")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_52uk5"]
random_pitch = 1.2
streams_count = 3
stream_0/stream = ExtResource("26_ugh8l")
stream_0/weight = 1.0
stream_1/stream = ExtResource("26_ara2l")
stream_1/weight = 1.0
stream_2/stream = ExtResource("28_kknyl")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_80lfd"]
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("30_a151y")
stream_0/weight = 1.0
stream_1/stream = ExtResource("31_c1cyj")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sta5l"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("32_p54kd")
stream_0/weight = 1.0
stream_1/stream = ExtResource("33_hms13")
stream_1/weight = 1.0
stream_2/stream = ExtResource("34_35b8i")
stream_2/weight = 1.0

[node name="Saul" instance=ExtResource("1_regtg")]
floor_constant_speed = true
platform_on_leave = 2
script = ExtResource("2_rhth6")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ypg7h")

[node name="CoyoteTimer" type="Timer" parent="Timers" index="0"]
wait_time = 0.2
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers" index="1"]
wait_time = 0.2
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers" index="2"]
wait_time = 0.26
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timers" index="3"]
wait_time = 0.3
one_shot = true

[node name="ClingTime" type="Timer" parent="Timers" index="4"]
wait_time = 0.5
one_shot = true

[node name="FootstepTimer" type="Timer" parent="Timers" index="6"]
one_shot = true

[node name="CancelSlideDelay" type="Timer" parent="Timers" index="7"]
wait_time = 0.1
one_shot = true

[node name="WallGrabCooldown" type="Timer" parent="Timers" index="8"]
wait_time = 0.06
one_shot = true

[node name="WaterTimer" type="Timer" parent="Timers" index="9"]
wait_time = 2.2
one_shot = true

[node name="LookOffsetTimer" type="Timer" parent="Timers" index="10"]
wait_time = 0.4
one_shot = true

[node name="Splash" parent="." index="2" instance=ExtResource("3_ewshg")]

[node name="DashTrail" parent="." index="3" instance=ExtResource("4_6x0l7")]

[node name="Detection" type="Node2D" parent="." index="4"]

[node name="Right" type="RayCast2D" parent="Detection" index="0"]
position = Vector2(6, 0)
target_position = Vector2(2, 0)

[node name="Left" type="RayCast2D" parent="Detection" index="1"]
position = Vector2(-6, 0)
target_position = Vector2(-2, 0)

[node name="AudioListener2D" type="AudioListener2D" parent="." index="5"]
current = true

[node name="Sprite" type="AnimatedSprite2D" parent="." index="6"]
sprite_frames = SubResource("SpriteFrames_vg3q4")
animation = &"Idle"
autoplay = "Idle"

[node name="Particles" type="Node2D" parent="." index="7"]

[node name="WalkDust" type="GPUParticles2D" parent="Particles" index="0"]
position = Vector2(0, 16)
emitting = false
process_material = SubResource("ParticleProcessMaterial_y8iht")
texture = SubResource("AtlasTexture_mwvod")
lifetime = 0.5

[node name="SlideDust" type="GPUParticles2D" parent="Particles" index="1"]
z_index = -1
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_f7upe")
texture = ExtResource("22_7s8ad")
lifetime = 0.9

[node name="Damge" type="GPUParticles2D" parent="Particles" index="2"]
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_eh6px")
texture = SubResource("AtlasTexture_grqm6")
one_shot = true
explosiveness = 1.0

[node name="Jump" type="GPUParticles2D" parent="Particles" index="3"]
position = Vector2(0, 13)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_kf0yp")
texture = SubResource("AtlasTexture_blgdw")
one_shot = true
explosiveness = 1.0

[node name="Bubbles" type="GPUParticles2D" parent="Particles" index="4"]
material = SubResource("CanvasItemMaterial_velti")
position = Vector2(0, -8)
emitting = false
process_material = SubResource("ParticleProcessMaterial_ak3j7")
texture = ExtResource("23_14irh")
lifetime = 2.0

[node name="Jump" type="AudioStreamPlayer" parent="Sounds" index="1"]
stream = SubResource("AudioStreamRandomizer_5o1wf")
volume_db = -6.0

[node name="Dash" type="AudioStreamPlayer" parent="Sounds" index="2"]
stream = SubResource("AudioStreamRandomizer_52uk5")
volume_db = -12.0

[node name="HitWall" type="AudioStreamPlayer" parent="Sounds" index="3"]
stream = ExtResource("27_fmtxo")
volume_db = -2.0
pitch_scale = 2.05

[node name="Died" type="AudioStreamPlayer" parent="Sounds" index="4"]
stream = ExtResource("30_kmcv7")
volume_db = 1.0
pitch_scale = 0.5

[node name="Footstep" type="AudioStreamPlayer" parent="Sounds" index="5"]
stream = SubResource("AudioStreamRandomizer_80lfd")
volume_db = -5.0

[node name="Slide" type="AudioStreamPlayer" parent="Sounds" index="6"]
volume_db = -8.0

[node name="Splash" type="AudioStreamPlayer2D" parent="Sounds" index="7"]
stream = SubResource("AudioStreamRandomizer_sta5l")
volume_db = -12.0

[node name="WaterAmbience" type="AudioStreamPlayer" parent="Sounds" index="8"]
stream = ExtResource("37_52ksu")
volume_db = -6.0
